# on.dig.net

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md  deny.toml  llms.txt  publish-assets.sh
.config/: nextest.toml
.github/workflows/: ci.yml  deploy.yml
assets/: dig-embed.js  dig_client.js  dig_client_bg.wasm  loader.html  sw.js
assets/pages/: available.html  error.html  expired.html  pending.html  revoked.html
infra/: .terraform.lock.hcl  apigw.tf  assets.tf  cloudfront.tf  dns.tf  lambda.tf  oidc.tf  outputs.tf  variables.tf  versions.tf  watcher.tf
runbooks/: deploy.md  local.md
src/: domain.rs  lib.rs  watcher.rs
test/: load-sw.mjs  stub-dig-client.mjs  sw-import-hooks.mjs  sw-runtime.test.mjs  sw.test.mjs
tests/a11y/: axe.test.mjs  package-lock.json  package.json
